--- a/Git vs HTML/Trang CV ca nhan.html
+++ b/Git vs HTML/Trang CV ca nhan.html
@@ -32,7 +32,7 @@
 <body>
     <h1><b><u>Curriculum Vitae</u></b></h1>
     <hr>
-    <img src = "image/It's%20me.jpg" alt = "This is Trần Anh" width = "200" height = "auto" title = "Trần Anh">
+    <img src = "../TestCode/image/It's%20me.jpg" alt = "This is Trần Anh" width = "200" height = "auto" title = "Trần Anh">
     <pre>
         Họ và tên: Trần Anh
         Địa chỉ: Hà Nội
